src/snapshots/cornercase__ui__tests__overlay__renders_a_form_error.snap
---
source: src/ui.rs
expression: render(&v).backend()
---
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"▌ cornercase (1)  ╭─ new worktree ───────────────────────────────────────────────╮                  "
"                  │ branch                                                       │                  "
"  + new           │ › feat/login                                                 │                  "
"                  │ in ~/.cornercase/worktrees/cornercase/feat-login             │                  "
"                  │                                                              │                  "
"                  │ a branch named 'feat/login' already exists                   │                  "
"                  │                                                              │                  "
"                  │                                                              │                  "
"                  │                                             create   cancel  │                  "
"                  ╰──────────────────────────────────────────────────────────────╯                  "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  usage                        │                         │                                          "
"  quit                         │                         │                                          "
