src/snapshots/cornercase__ui__tests__overlay__renders_the_keys_menu_at_the_bottom_of_the_pane.snap
---
source: src/ui.rs
assertion_line: 7106
expression: "render(&with(Overlay::Keys(keys_menu()))).backend()"
---
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" Projects                      │ Workspaces              │                                          "
"                               │                         │                                          "
"▌ cornercase (1)               │                         │                                          "
"                               │                         │                                          "
"  + N╭─ Keys ─────────────────────────────────────────────────────────────────────────────────╮     "
"     │ n     next tab                a     agent that needs you    g     git…                 │     "
"     │ p     previous tab            /     search                  w     workspace…           │     "
"     │ 1-9   go to tab               c     new tab                 i     issues               │     "
"     │ ]     next workspace          |     split right             t     todo                 │     "
"     │ [     previous workspace      -     split down              ,     settings             │     "
"     │ }     next project            x     close pane              u     usage                │     "
"     │ {     previous project        r     rename tab              q     quit                 │     "
" ────│ ←↑↓→  pane on that side       f     find…                                              │     "
"  Set│                                                                                        │     "
"  Usa│ esc closes · ctrl+] twice types it in the pane                                         │     "
"  Qui╰────────────────────────────────────────────────────────────────────────────────────────╯     "
