src/snapshots/cornercase__ui__tests__overlay__renders_the_menu_where_it_was_opened.snap
---
source: src/ui.rs
expression: render(&v).backend()
---
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"▌ cornercase (1)               │                         │                                          "
"    ╭──────────────╮           │                         │                                          "
"  + │ new worktree │           │                         │                                          "
"    ╰──────────────╯           │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  usage                        │                         │                                          "
"  quit                         │                         │                                          "
